# tuya-t5-blind-navigator

./: .gitignore  LICENSE  README.md
design/: CHANGES.md
design/iris-firmware-ui/: README.md
design/iris-firmware-ui/chats/: chat1.md
design/iris-firmware-ui/project/: IRIS Firmware UI.html  eye.jsx  screens.jsx  specs.jsx  tokens.css
docs/: ARCHITECTURE.md  BUILD_AND_FLASH.md  CLOUD_OPTIONS.md  HARDWARE.md  LESSONS_LEARNED.md  PLANNED.md  PROXY_SETUP.md  ROADMAP.md  SENSORS_ROADMAP.md  USE_CASES.md
firmware/blind_navigator/: CMakeLists.txt  Kconfig  app_default.config
firmware/blind_navigator/config/: TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config
firmware/blind_navigator/fonts/: README.md  gen_fonts.sh
firmware/blind_navigator/include/: iris_fonts.h  iris_tokens.h  nav_config.h.example  nav_webui.h
firmware/blind_navigator/src/: main.c  nav_display.c  nav_display.h  nav_webui.c  openai_backend.c  openai_backend.h
proxy/: .env.example  README.md  openai-proxy.service  openai_proxy.py
scripts/: release.sh
